--- a/problem-a/css/style.css
+++ b/problem-a/css/style.css
@@ -2,3 +2,15 @@ body {
     font-size: 16px;
     font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
 }
+
+p {
+    line-height: 150%;
+}
+
+img {
+    max-height: 400px;
+}
+
+.colored {
+    color: palevioletred
+}
