--- a/problem-a/css/style.css
+++ b/problem-a/css/style.css
@@ -1,10 +1,10 @@
 body {
     font-size: 16px;
-    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 p {
-    line-height: 150%;
+    line-height: 1.5;
 }
 
 img {
